[gd_scene load_steps=12 format=3 uid="uid://c4bax87kqk6po"]

[ext_resource type="Script" path="res://scenes/battle.gd" id="1_c4w7k"]
[ext_resource type="Texture2D" uid="uid://crj1a7pxbsidn" path="res://assets/battle/BG/battleback5.png" id="1_uxafu"]
[ext_resource type="PackedScene" uid="uid://dkrrrbfnsa5lw" path="res://scenes/battle_box.tscn" id="3_ymsal"]
[ext_resource type="PackedScene" uid="uid://cr71ho5tuj7bn" path="res://scenes/enemy.tscn" id="4_5kxrv"]
[ext_resource type="Texture2D" uid="uid://bgqtptx5id2tk" path="res://assets/gui/Cursor.png" id="5_rvb1y"]
[ext_resource type="Script" path="res://scripts/Cursor.gd" id="6_v5kcj"]
[ext_resource type="PackedScene" uid="uid://mje13m0bdoj2" path="res://scenes/character.tscn" id="7_uvy1q"]
[ext_resource type="Texture2D" uid="uid://d0nnq665edodf" path="res://assets/gui/TurnCursor.png" id="8_84fjv"]
[ext_resource type="PackedScene" uid="uid://c6p2qahphkcdn" path="res://scenes/faris.tscn" id="8_v0sm1"]
[ext_resource type="PackedScene" uid="uid://c04ien1etnu7m" path="res://scenes/Lenna.tscn" id="9_lmry4"]
[ext_resource type="PackedScene" uid="uid://s6c7qkb1iee3" path="res://scenes/galuf.tscn" id="10_engk8"]

[node name="Battle" type="CanvasLayer"]
script = ExtResource("1_c4w7k")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(576, 324)
scale = Vector2(1.04348, 1.04348)
texture = ExtResource("1_uxafu")

[node name="BattleMenu" parent="." instance=ExtResource("3_ymsal")]

[node name="Enemies" type="Node2D" parent="."]
position = Vector2(-112, 299)
scale = Vector2(4, 4)

[node name="Enemy" parent="Enemies" instance=ExtResource("4_5kxrv")]
position = Vector2(-34, -23)

[node name="Cursor" type="Sprite2D" parent="."]
z_index = 3
position = Vector2(-118, 150)
scale = Vector2(0.77223, 0.82423)
texture = ExtResource("5_rvb1y")
flip_h = true
script = ExtResource("6_v5kcj")

[node name="Party" type="Node2D" parent="."]
position = Vector2(1311, 86)

[node name="Character" parent="Party" instance=ExtResource("7_uvy1q")]
position = Vector2(13, 36)
scale = Vector2(4, 4)

[node name="Character2" parent="Party" instance=ExtResource("8_v0sm1")]
position = Vector2(88, 146)
scale = Vector2(4, 4)

[node name="Character3" parent="Party" instance=ExtResource("9_lmry4")]
position = Vector2(18, 241)
scale = Vector2(4, 4)

[node name="Character4" parent="Party" instance=ExtResource("10_engk8")]
position = Vector2(60, 336)
scale = Vector2(4, 4)

[node name="TurnCursor" type="Sprite2D" parent="."]
position = Vector2(1491, 155)
texture = ExtResource("8_84fjv")

[connection signal="animation_end" from="BattleMenu" to="." method="_on_battle_menu_animation_end"]
[connection signal="animation_end" from="Enemies/Enemy" to="." method="_on_enemy_animation_end"]
[connection signal="death" from="Enemies/Enemy" to="." method="_on_enemy_death"]
